--- a/index.html
+++ b/index.html
@@ -130,23 +130,29 @@
 
 
         <article class="card product-card"
-          data-name="Blast hoodie"
-          data-price="79000"
+          data-name="f.t малгай"
+          data-price="19000"
           data-discount="5"
-          data-category="hoodie"
+          data-category="малгай"
           data-tag="NEW"
-          data-images="https://image2url.com/r2/default/images/1768885597743-650618fd-61cc-4d4b-9e1a-8cf05004fc6c.jpeg,https://image2url.com/r2/default/images/1768885630552-0394af78-a528-4fdd-adc1-a17305c432eb.jpeg,https://image2url.com/r2/default/images/1768885659996-a75deadc-16cb-4862-a03c-ab893c8cfcce.jpeg"
-          data-desc="Өдөр тутамд тохиромжтой hoodie."
+          data-images="https://image2url.com/r2/default/images/1768895817080-62eaefb7-0d1c-4765-acf4-c0d8c9e66373.jpeg
+,https://image2url.com/r2/default/images/1768895855410-77618632-7527-433c-b04f-b79a7753ef4e.jpeg,
+
+https://image2url.com/r2/default/images/1768895880471-39c6bf73-857b-40ce-8abb-0269195900b1.jpeg"
+
+          data-desc="Өдөр тутамд тохиромжтой загварлаг малгай"
           data-sizes="S,M,L,XL"
-          data-colors="White,Black,Brown"
+          data-colors="White,Black,Red"
         >
           <div class="media">
-            <img src="https://image2url.com/r2/default/images/1768885597743-650618fd-61cc-4d4b-9e1a-8cf05004fc6c.jpeg" alt="Blast hoodie">
+            <img src="
+https://image2url.com/r2/default/images/1768895817080-62eaefb7-0d1c-4765-acf4-c0d8c9e66373.jpeg
+" alt="f.t малгай">
             <div class="tag hot">HOT</div>
           </div>
           <div class="body">
-            <div class="name">Blast hoodie</div>
-            <div class="cat">hoodie</div>
+            <div class="name">f.t малгай"</div>
+            <div class="cat">малгай</div>
             <div class="row">
               <div class="pricebox">
                 <div class="price" data-price-ui></div>
