--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="google-site-verification" content="googleac8cea91baa56aa1.html"  />
+  <meta name="google-site-verification" content="Whj5RVvztjFyqZ4fStNJbfT9KveuQILvzF6UvnmUW6A" />
   <title>Freakyt.arc — Хувцасны каталог</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
